syntax = "proto3";

package million.db;

import "google/protobuf/descriptor.proto";

message DbSqlOptions {
}

message DbCacheOptions {
}

// 通用数据库选项
message FileOptionsDb {
    DbSqlOptions sql = 1;
    DbCacheOptions cache = 2;
}

extend google.protobuf.FileOptions {
    FileOptionsDb db = 20000;
}

// SQL 相关选项（MySQL）
message TableSqlOptionsForeignKey {
  string column = 1;             // 外键列
  string referenced_table = 2;   // 被引用表名
  string referenced_column = 3;  // 被引用列名
  string on_delete = 4;          // 外键删除策略 (e.g., CASCADE, RESPONSETRICT, etc.)
  string on_update = 5;          // 外键更新策略 (e.g., CASCADE, RESPONSETRICT, etc.)
}

message TableSqlOptionsMultiIndex {
    ColumnSqlOptionsIndex index = 1;
    string index_name = 2;
    repeated int32 field_numbers = 3;
}

message TableSqlOptions {
    string charset = 1;              // 字符集
    string engine = 2;               // 存储引擎
    repeated TableSqlOptionsMultiIndex multi_indexs = 3;   // 组合索引
    // repeated ForeignKey foreign_keys = 4; // 外键定义
}

// Cache 相关选项（Redis）
message TableCacheOptions {
}


message MessageOptionsTable {
    TableSqlOptions sql = 1;
    TableCacheOptions cache = 2;
    string name = 3;  // 表名
    int32 sync_tick = 4;  // Tick入库时间，单位为tick
    int32 primary_key = 5;  // 主键 field_number
}

extend google.protobuf.MessageOptions {
    MessageOptionsTable table = 20001;
}

enum ColumnSqlOptionsIndex {
    NONE = 0;
    PRIMARY_KEY = 1;
    INDEX = 2;
    UNIQUE = 3;
    FULLTEXT = 4;
}

// SQL 相关字段选项（MySQL）
message ColumnSqlOptions {
    ColumnSqlOptionsIndex index = 1;                     // 索引类型
    bool auto_increment = 2;                             // 自增
    string default_value = 3;                            // 默认值
    string comment = 4;                                  // 字段注释
    bool not_null = 5;                                   // 非空约束
    int32 str_len = 6;                                   // 负数约束为char长度，正数约束为varchar长度
}

// Cache 相关字段选项（Redis）
message ColumnCacheOptions {
    bool index = 1;                  // 字段是否作为索引
}

message FieldOptionsColumn {
    ColumnSqlOptions sql = 1;
    ColumnCacheOptions cache = 2;
}

extend google.protobuf.FieldOptions {
    FieldOptionsColumn column = 20001;
}

message DbRowMeta {
    uint64 db_version = 1;
    uint64 batch_id = 2;
}